rgw: allow init complete to proceed in case of erroneus zone deletes

Currently a master zone delete in a zonegroup followed by a period commit would
render RGWRados to be unusable, check if the zonegroup is empty and continue
initialization in these cases so that removal can proceed.

Fixes: http://tracker.ceph.com/issues/37328
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>